# dotsec-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  QA.md  README.md  ddd.json  dotsec.json  index.html  package-lock.json  package.json  release-plz.toml  rspress.config.ts  schema.json  settings.json  versions.json
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy-docs.yml  fuzz.yml  publish-napi.yml  publish-npm.yml  release-plz.yml
aws/: CHANGELOG.md  Cargo.toml
aws/src/: lib.rs
aws/tests/: localstack_kms.rs
beta/: 404.html  index.html
beta/guide/: ci.html  commands.html  directives.html  encryption.html  index.html  library.html  operations.html  release-workflow.html  security.html  setup.html  troubleshooting.html
beta/static/: search_index.en.1178bc2b.json  search_index.en.5d1c94e4.json  search_index.en.9229e655.json  search_index.en.ac7cd282.json  search_index.en.b55feca6.json  search_index.en.f50b4656.json
crypto/: CHANGELOG.md  Cargo.toml
crypto/src/: lib.rs  local.rs  mac.rs
docs/: index.md
docs/guide/: _meta.json  ci.md  commands.md  directives.md  encryption.md  index.md  index.mdx  library.md  operations.md  release-workflow.md  security.md  setup.md  setup.mdx  troubleshooting.md
docs/styles/: index.css
dotenv/: CHANGELOG.md  Cargo.toml
dotenv/src/: dotenv.pest  lib.rs  schema.rs  types.rs
dotsec/: CHANGELOG.md  Cargo.toml
dotsec-core/: CHANGELOG.md  Cargo.toml
dotsec-core/src/: configuration.rs  header_v3.rs  lib.rs
dotsec-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
dotsec-napi/npm/dotsec-core-darwin-arm64/: package.json
dotsec-napi/npm/dotsec-core-darwin-x64/: package.json
dotsec-napi/npm/dotsec-core-linux-arm64-gnu/: package.json
dotsec-napi/npm/dotsec-core-linux-x64-gnu/: package.json
dotsec-napi/npm/dotsec-core-win32-arm64-msvc/: package.json
dotsec-napi/npm/dotsec-core-win32-x64-msvc/: package.json
dotsec-napi/src/: lib.rs
dotsec/npm/dotsec/: README.md  package.json
dotsec/npm/dotsec-darwin-arm64/: package.json
dotsec/npm/dotsec-darwin-x64/: package.json
dotsec/npm/dotsec-linux-arm64-gnu/: package.json
dotsec/npm/dotsec-linux-x64-gnu/: package.json
dotsec/npm/dotsec-win32-arm64-msvc/: package.json
dotsec/npm/dotsec-win32-x64-msvc/: package.json
dotsec/src/: cli_configuration.rs  configuration.rs  constants.rs  default_options.rs  errors.rs  fs.rs  lib.rs  main.rs
dotsec/src/cli/: helpers.rs  mod.rs  poster.rs
dotsec/src/cli/commands/: base.rs  config.rs  create_schema.rs  decrypt.rs  diff.rs  eject.rs  encrypt.rs  export.rs  format.rs  header.rs  import.rs  init.rs  license.rs  migrate.rs  mod.rs  push.rs  remove_directives.rs  rotate_key.rs  run.rs  set.rs  show.rs  validate.rs
dotsec/src/cli/commands/schema/: codegen.rs  export.rs  mod.rs
dotsec/tests/: set_description.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parse_dotenv.rs  parse_header.rs  parse_schema.rs  roundtrip.rs
fuzz/seeds/parse_dotenv/: 03_directives.sec  05_enum.sec  12_comments_blanks.sec  14_escapes.sec
fuzz/seeds/parse_header/: 01_valid.txt  02_unknown_field.txt  03_missing_format.txt  04_bad_mac_len.txt  05_bad_base64.txt  06_dup_field.txt  07_bad_format.txt  09_only_separators.txt
fuzz/seeds/parse_schema/: 01_basic.schema  02_enum.schema
fuzz/seeds/roundtrip/: 02_quotes.sec  04_push.sec  06_pattern.sec  07_header.sec  08_interp.sec  09_dotted_key.sec  10_numeric.sec  11_deprecated.sec  13_empty_values.sec
npm/dotsec-darwin-arm64/: package.json
npm/dotsec-darwin-x64/: package.json
npm/dotsec-linux-x64-gnu/: package.json
npm/dotsec-win32-x64-msvc/: package.json
pr-1/: 404.html  index.html
pr-1/guide/: commands.html  directives.html  encryption.html  index.html  release-workflow.html  setup.html
pr-1/static/: search_index.en.2394739b.json  search_index.en.8df276c8.json  search_index.en.f611054a.json
pr-10/: 404.html  index.html
pr-10/guide/: commands.html  directives.html  encryption.html  index.html  release-workflow.html  setup.html
pr-10/static/: search_index.en.e24999d2.json
pr-11/: 404.html  index.html
pr-11/guide/: commands.html  directives.html  encryption.html  index.html  release-workflow.html  setup.html
pr-11/static/: search_index.en.14c18e57.json
pr-12/: 404.html  index.html
pr-12/guide/: commands.html  directives.html  encryption.html  index.html  release-workflow.html  setup.html
pr-13/: 404.html  index.html
pr-13/guide/: commands.html  (+5 more)
pr-14/: 404.html  index.html
pr-15/: 404.html  index.html
pr-16/: 404.html  index.html
pr-17/: 404.html  index.html
pr-18/: 404.html  index.html
pr-19/: 404.html  index.html
pr-2/: 404.html  index.html
pr-20/: 404.html  index.html
pr-21/: 404.html  index.html
pr-22/: 404.html  index.html
pr-23/: 404.html  index.html
pr-24/: 404.html  index.html
pr-25/: 404.html  index.html
pr-26/: 404.html  index.html
pr-27/: 404.html  index.html
pr-28/: 404.html  index.html
pr-29/: 404.html  index.html
pr-3/: 404.html  index.html
pr-30/: 404.html  index.html
pr-31/: 404.html  index.html
pr-32/: 404.html  index.html
pr-33/: 404.html  index.html
pr-34/: 404.html  index.html
pr-35/: 404.html  index.html
pr-36/: 404.html  index.html
pr-37/: 404.html  index.html  version-switcher.js
pr-38/: 404.html  index.html
pr-39/: 404.html  index.html
pr-4/: 404.html  index.html
pr-40/: 404.html  index.html
pr-41/: 404.html  index.html
pr-42/: 404.html  index.html
pr-43/: 404.html  index.html
pr-44/: 404.html  index.html
pr-45/: 404.html  index.html
pr-46/: 404.html  index.html
pr-47/: 404.html  index.html
pr-48/: 404.html  index.html
pr-49/: 404.html  index.html
pr-5/: 404.html  index.html
pr-50/: 404.html  index.html
pr-56/: 404.html  index.html
pr-6/: 404.html  index.html
pr-7/: 404.html  index.html
pr-8/: 404.html  index.html
pr-9/: 404.html  index.html
v5.0.1/: 404.html  index.html  version-switcher.js
v5.0.2/: 404.html  index.html
v6.0.0/: 404.html  index.html
v7.0.0/: 404.html  index.html
v7.0.1/: 404.html  index.html
(+828 files in other folders)
