[workspace]
resolver = "2"
members = ["dotsec", "aws", "dotenv", "dotsec-napi"]

[workspace.dependencies]
base64 = "0.21.7"
colored = "2.1.0"
log = "0.4.20"
pest = "2.1"
thiserror = "1.0"
tokio = { version = "1.35.0", features = ["full", "process"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
