[package]
name = "aws"
version = "5.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.47.0"
aws-sdk-secretsmanager = "1.47.0"
aws-sdk-ssm = "1.47.0"
base64 = { workspace = true }
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
thiserror = { workspace = true }
zeroize = "1.8"
