[package]
name = "aws"
version = "6.0.0"
edition = "2021"
description = "AWS KMS encryption for dotsec"
license = "MIT"

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.47.0"
aws-sdk-secretsmanager = "1.47.0"
aws-sdk-ssm = "1.47.0"
base64 = { workspace = true }
crypto = { path = "../crypto" }
thiserror = { workspace = true }
zeroize = "1.8"
