[package]
name = "crypto"
version = "5.0.2"
edition = "2021"
description = "Shared cryptographic functions for dotsec"
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
base64 = { workspace = true }
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
thiserror = { workspace = true }
zeroize = "1.8"
age = { version = "0.11", features = ["armor"] }
