[package]
name = "dotsec-core"
version = "6.0.0"
edition = "2021"
description = "Core library for dotsec — encryption, decryption, interpolation, and redaction"
license = "MIT"

[dependencies]
aws = { path = "../aws" }
crypto = { path = "../crypto" }
base64 = { workspace = true }
dotenv = { path = "../dotenv" }
serde_json = "1.0"
zeroize = "1.8"

[dev-dependencies]
tokio = { workspace = true }
