[package]
name = "dotsec-core"
version = "7.0.1"
edition = "2021"
description = "Core library for dotsec — encryption, decryption, interpolation, and redaction"
license = "MIT"

[dependencies]
aws = { path = "../aws" }
crypto = { path = "../crypto" }
base64 = { workspace = true }
dotenv = { path = "../dotenv" }
serde_json = "1.0"
thiserror = { workspace = true }
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
