[package]
name = "dotsec"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-error = "1.0.0"
aws = { path = "../aws" }
colored = { workspace = true }
dotenv = { path = "../dotenv" }
clap = { version = "4.4.14", features = [
    "derive",
    "cargo",
    "color",
    "env",
    "error-context",
    "suggestions",
] }
clap-serde-derive = "0.2.1"
comfy-table = "7.1.0"
env_logger = { features = [
    "regex",
    "humantime",
], default-features = false, version = "0.11.2" }
log = { workspace = true }
miette = { workspace = true }
minus = { version = "5.5.3", features = ["static_output"] }
pest = { workspace = true }
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-process-stream = "0.4.0"
tokio-stream = "0.1.14"
schemars = "0.8.16"
[features]
# Define features for cli and library
default = ["cli"]
cli = []
library = []
