[package]
name = "dotsec"
version = "5.0.0"
edition = "2021"

[dependencies]
aws = { path = "../aws" }
colored = { workspace = true }
dotenv = { path = "../dotenv" }
clap = { version = "4.4.14", features = [
    "derive",
    "cargo",
    "color",
    "env",
    "error-context",
    "suggestions",
] }
comfy-table = "7.1.0"
env_logger = { features = [
    "regex",
    "humantime",
], default-features = false, version = "0.11.2" }
hex = "0.4"
libc = "0.2"
portable-pty = "0.9"
rand = "0.8"
inquire = "0.7"
log = { workspace = true }
signal-hook = "0.3"
serde_json = "1.0"
tokio = { workspace = true }

[features]
default = ["cli"]
cli = []
library = []
